# Celluhs

./: .gitignore  CMakeLists.txt  README.md
examples/: .~lock.fredkin-data.csv#  fredkin-data.csv  fredkins_init-f.json
include/: celluhs.h  debug.h  formats.h  grid.h  rules.h  typemods.h  types.h
src/: CMakeLists.txt  formats.c  grid.c  grid.cc  rules.c
test/: CMakeLists.txt  test_api.c  test_conway.c  test_conway_quiet.c  test_format_fs.c  test_fredkin.c  test_m_elem_at.c  test_macros.h  test_rules.c
